<resources>
    <string name="app_name">LyricsBuddy</string>
    <string name="app_label">Lyrics Buddy</string>
    <string name="title_home">Home</string>
    <string name="lyric_options_edit">Edit</string>
    <string name="lyric_options_show">Display</string>
    <string name="lyric_options_share">Share</string>

    <!--http://helensedwick.com/sources-of-public-domain-lyrics/-->
    <string name="ballgame_title">Take Me Out To The Ball Game</string>
    <string name="ballgame_artist">Ed Meeker</string>
    <string name="ballgame_lyrics">
        Take me out to the ball game\n
        Take me out with the crowd\n
        Buy me some peanuts and crackerjacks\n
        I don\'t care if I never get back\n
        Let me root, root, root\n
        For the home team\n
        If they don\'t win it\'s a shame\n
        Aahh.\n
        For it\'s one,\n
        Two,\n
        Three strikes you\'re out\n
        At the old ball game\n
        \n
        All I need is just one chance\n
        I could hit a home run\n
        There isn\'t anyone else like me\n
        Maybe I\'ll go down in history\n
        And it\'s root, root, root\n
        For the home team\n
        Here comes fortune and fame\n
        \'Cause I know\n
        That\n
        I\'ll be the star\n
        At the old\n
        Ball \n
        Game
    </string>

    <string name="sweetChariot_title">Swing Low, Sweet Chariot</string>
    <string name="sweetChariot_artist">Wallace Willis</string>
    <string name="sweetChariot_lyrics">
        Swing low, sweet chariot
        \nComing for to carry me home
        \nSwing low, sweet chariot
        \nComing for to carry me home
        \n
        \nI looked over Jordan, and what did I see
        \nComing for to carry me home
        \nA band of angels coming after me
        \nComing for to carry me home
        \n
        \nSwing low, sweet chariot
        \nComing for to carry me home
        \nSwing low, sweet chariot
        \nComing for to carry me home
        \n
        \nIf you get there before I do
        \nComing for to carry me home
        \nTell all my friends I\'m coming, too
        \nComing for to carry me home
        \n
        \nSwing low, sweet chariot
        \nComing for to carry me home
        \nSwing low, sweet chariot
        \nComing for to carry me home
        \n
        \nI\'m sometimes up and sometimes down
        \nComing for to carry me home
        \nBut still my soul feels heavenly bound
        \nComing for to carry me home
        \n
        \nSwing low, sweet chariot
        \nComing for to carry me home
        \nSwing low, sweet chariot
        \nComing for to carry me home
        \nThe brightest day that I can say
        \nComing for to carry me home
        \nWhen Jesus washed my sins away
        \nComing for to carry me home
        \nSwing low, sweet chariot
        \nComing for to carry me home
        \nSwing low, sweet chariot
        \nComing for to carry me home
        \n
        \nIf I get there before you do
        \nComing for to carry me home
        \nI\'ll cut a hole and pull you through
        \nComing for to carry me home
    </string>

    <string name="jellyRollBlues_title">Jelly Roll Blues</string>
    <string name="jellyRollBlues_album">Jelly Roll Morton Plays Jelly Roll Morton and Other Favorites</string>
    <string name="jellyRollBlues_artist">Jelly Roll Morton</string>
    <string name="jellyRollBlues_lyrics">
        I stood on the corner, my feet was dripping wet
        \nI stood on the corner, my feet was dripping wet
        \nI asked every man I met
        \n
        \nCan\'t give me a dollar, give me a lousy dime
        \nCan\'t give me a dollar, give me a lousy dime
        \nJust to feed that hungry man of mine
        \n
        \nI got a husband and I got a kid man too
        \nI got a husband and I got a kid man too
        \nMy husband can\'t do what my kid man can do
        \n
        \nI like the way he cook my cabbage for me
        \nI like the way he cook my cabbage for me
        \nLook like he set my natural soul free
    </string>

    <string name="title_view_hint">Title</string>
    <string name="artist_view_hint">Artist</string>
    <string name="lyrics_view_hint">Lyrics</string>
    <string name="by">by</string>
    <string name="album_view_hint">Album</string>
    <string name="lyric_options_colors">Color Schemes</string>
    <string name="lyric_options_shuffle">Shuffle Colors</string>
    <string name="title_new_lyrics">New</string>
    <string name="lyric_options_undo">Undo</string>
    <string name="lyric_options_redo">Redo</string>
    <string name="track_artist_separator_text">&#8211;</string>
    <string name="share_intent_message">Share Lyrics</string>
    <string name="share_intent_fail_message">Share Unavailable</string>
    <string name="share_trash_fail_message">Items Not Deleted</string>
    <string name="share_intent_subject_line_multiple"> - and other lyrics</string>
    <string name="share_intent_subject_line_ext">.txt</string>
    <string name="mimeType">text/*</string>
    <string name="mimeTypePrefix">text</string>
    <string name="menu_title_lyrics_on_web">Lyrics on Web</string>
    <string name="dialog_title_lyrics_on_web">Song Lyrics on the Web</string>
    <string name="filter_any">Any</string>
    <string name="filter_artist">Artist</string>
    <string name="filter_album">Album</string>
    <string name="filter_track">Track</string>
    <string name="sort_natural">By Recent</string>
    <string name="sort_artist">By Artist</string>
    <string name="sort_album">By Album</string>
    <string name="sort_track">By Track</string>
    <string name="confirm_delete_title">Confirm Delete</string>
    <string name="confirm_delete_msg">Delete %d items?</string>
    <string name="confirm_delete_btn_positive">Delete</string>
    <string name="confirm_delete_btn_negative">Cancel</string>

    <string-array name="song_lyric_site_names">
        <item>Google Search: \"Song Lyrics\"</item>
        <item>www.lyricsondemand.com/</item>
        <item>www.azlyrics.com/</item>
        <item>www.lyrics.com/</item>
        <item>genius.com/</item>
    </string-array>

    <string-array name="secure_song_lyrics_site_urls">
        <item>Song Lyrics</item>
        <item>https://www.lyricsondemand.com/</item>
        <item>https://www.azlyrics.com/</item>
        <item>https://www.lyrics.com/</item>
        <item>https://genius.com/</item>
    </string-array>
</resources>
