<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lyrics_scroller"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    >

    <LinearLayout
        android:id="@+id/lyrics_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >

        <com.example.john.lyricsbuddy.WrappedEditText
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="@dimen/max_width_track_info"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/shadowPadding"
            android:paddingEnd="@dimen/shadowPadding"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:hint="@string/title_view_hint"
            android:inputType="textCapWords|textNoSuggestions|textMultiLine"
            android:textAppearance="@style/TrackInfo"
            />

        <com.example.john.lyricsbuddy.WrappedEditText
            android:id="@+id/album"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/album_top_margin"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:hint="@string/album_view_hint"
            android:inputType="textCapWords|textNoSuggestions|textMultiLine"
            android:maxWidth="@dimen/max_width_track_info"
            android:paddingEnd="@dimen/shadowPadding"
            android:paddingRight="@dimen/shadowPadding"
            android:textAppearance="@style/TrackInfo_Subordinate" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/album_top_margin"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/shadowPadding"
                android:paddingEnd="@dimen/shadowPadding"
                android:gravity="center_horizontal|top"
                android:maxLines="1"
                android:text="@string/by"
                android:textAppearance="@style/TrackInfo_Subordinate"
                android:textStyle="italic"
                />

            <com.example.john.lyricsbuddy.WrappedEditText
                android:id="@+id/artist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="@dimen/max_width_track_info"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/by"
                android:layout_toRightOf="@+id/by"
                android:background="@android:color/transparent"
                android:paddingRight="@dimen/shadowPadding"
                android:paddingEnd="@dimen/shadowPadding"
                android:gravity="center_horizontal|top"
                android:hint="@string/artist_view_hint"
                android:inputType="textCapWords|textNoSuggestions|textMultiLine"
                android:textAllCaps="false"
                android:textAppearance="@style/TrackInfo_Subordinate"
                android:textStyle="italic" />
        </RelativeLayout>

        <com.example.john.lyricsbuddy.WrappedEditText
            android:id="@+id/lyrics_body"
            style="@android:style/TextAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/lyric_body_top_margin"
            android:background="@android:color/transparent"
            android:gravity="center_horizontal|top"
            android:hint="@string/lyrics_view_hint"
            android:inputType="textCapSentences|textNoSuggestions|textMultiLine"
            />
    </LinearLayout>
</ScrollView>